# rasa-calm-cookbook

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
recipes/level-1-basic/basic-tutorial/: .env.example  Makefile  README.md  config-azure.yml  config-local.yml  config.yml  domain.yml  pyproject.toml
recipes/level-1-basic/basic-tutorial/actions/: actions.py
recipes/level-1-basic/basic-tutorial/conversations/: sample_conversations.md
recipes/level-1-basic/basic-tutorial/data/: flows.yml
recipes/level-1-basic/basic-tutorial/tests/: e2e_test_cases.yml
recipes/level-2-intermediate/enterprise-search/: README.md
recipes/level-2-intermediate/multi-llm-routing/: README.md
recipes/level-2-intermediate/voice-assistant/: README.md
recipes/level-3-advanced/fine-tuning/: README.md
